--- a/src/app/header/nav/nav.component.scss
+++ b/src/app/header/nav/nav.component.scss
@@ -1,5 +1,16 @@
 a,
 button {
-    width: 100px;
     padding: 10px 0;
 }
+
+/* #img-logo {
+    width: 100%;
+}
+
+.logo-cont {
+    background-color: white;
+    width: 150px;
+    padding-right: 15px;
+    padding-left: 15px;
+    border-radius: 0;
+} */
