--- a/src/app/header/navbar/navbar.component.scss
+++ b/src/app/header/navbar/navbar.component.scss
@@ -1,15 +1,8 @@
 .navbar-cont {
-    display: flex;
+    /*  background-color: #e91e63; */
+
 }
 
 .nav-title {
-    background-color: rgb(77, 77, 77);
-}
-
-.nav-cont {
-    float: right;
-}
-
-#raised {
-    padding: 10px;
+    background-color: #424242;
 }
