--- a/src/app/auth/login/login.page.html
+++ b/src/app/auth/login/login.page.html
@@ -1,30 +1,44 @@
-<div>
-  <h1>Login Page</h1>
+<form #f="ngForm" (ngSubmit)="onSubmit()">
+  <div class="form-cont">
+    <mat-card class="example-card">
 
-  <form #f="ngForm" (ngSubmit)="onSubmit()">
-    <div class="form-cont">
+      <mat-card-title>Login Page</mat-card-title>
+      <mat-card-subtitle>Please insert Login details</mat-card-subtitle>
 
-      <mat-form-field appearance="fill">
-        <mat-label>Enter your Email</mat-label>
-        <input matInput ngModel name="email" type="email" id="email" placeholder="pat@example.com">
-        <mat-icon matSuffix>email</mat-icon>
-      </mat-form-field>
+      <mat-card-content>
+        <div class="example-container">
+          <mat-form-field appearance="fill">
+            <mat-label>Enter your email</mat-label>
+            <input matInput ngModel name="email" type="email" id="email" placeholder="pat@example.com">
+            <mat-icon matSuffix>email</mat-icon>
+          </mat-form-field>
+        </div>
+      </mat-card-content>
 
-      <mat-form-field appearance="fill">
-        <mat-label>Enter your password</mat-label>
-        <input matInput ngModel name="password" id="password" placeholder="pat@example.com">
-        <mat-icon matSuffix>password</mat-icon>
-      </mat-form-field>
+      <mat-divider inset></mat-divider>
 
-      <div>
-        <button type="submit">Submit</button>
-      </div>
+      <mat-card-content>
+        <div class="example-container">
+          <mat-form-field appearance="fill">
+            <mat-label>Enter your password</mat-label>
+            <input matInput ngModel name="password" id="password" [type]="hide ? 'password' : 'text'">
+            <button mat-icon-button matSuffix (click)="hide = !hide" [attr.aria-label]="'Hide password'"
+              [attr.aria-pressed]="hide">
+              <mat-icon>{{hide ? 'visibility_off' : 'visibility'}}</mat-icon>
+            </button>
+          </mat-form-field>
+        </div>
+      </mat-card-content>
 
-    </div>
-  </form>
+      <mat-card-actions>
+        <button mat-button type="submit">Submit</button>
+      </mat-card-actions>
 
-  <div *ngIf="error">
-    {{error}}
+      <mat-card-footer>
+        <mat-progress-bar mode="indeterminate"></mat-progress-bar>
+        <div *ngIf="error"> {{error}} </div>
+      </mat-card-footer>
+
+    </mat-card>
   </div>
-
-</div>
+</form>
