--- a/src/app/auth/signup/signup.page.html
+++ b/src/app/auth/signup/signup.page.html
@@ -1,27 +1,68 @@
-<div>
-  <h1>Signup Page</h1>
-  <form #f="ngForm" (ngSubmit)="onSubmit()">
-    <div>
-      <label for="firstname">Firstname</label>
-      <input type="text" ngModel name="firstname" id="firstname">
-    </div>
-    <div>
-      <label for="lastname" class="form-label">Lastname</label>
-      <input type="text" ngModel name="lastname" id="lastname">
-    </div>
-    <div>
-      <label for="email">Email</label>
-      <input type="email" ngModel name="email" id="email">
-    </div>
-    <div>
-      <label for="password">Password</label>
-      <input type="password" ngModel name="password" id="password">
-    </div>
-    <div>
-      <button type="submit">Submit</button>
-    </div>
-  </form>
-  <div *ngIf="error">
-    {{error}}
+<form #f="ngForm" (ngSubmit)="onSubmit()">
+  <div class="form-cont">
+    <mat-card class="example-card">
+
+      <mat-card-title>Register Page</mat-card-title>
+      <mat-card-subtitle>Please insert Registration details</mat-card-subtitle>
+
+      <mat-card-content>
+        <div class="example-container">
+          <mat-form-field appearance="fill">
+            <mat-label>Enter your first name</mat-label>
+            <input matInput ngModel name="firstname" type="text" id="firstname">
+            <mat-icon matSuffix>person</mat-icon>
+          </mat-form-field>
+        </div>
+      </mat-card-content>
+
+      <mat-divider inset></mat-divider>
+
+      <mat-card-content>
+        <div class="example-container">
+          <mat-form-field appearance="fill">
+            <mat-label>Enter your family name</mat-label>
+            <input matInput ngModel name="lastname" type="text" id="lastname">
+            <mat-icon matSuffix>people</mat-icon>
+          </mat-form-field>
+        </div>
+      </mat-card-content>
+
+      <mat-divider inset></mat-divider>
+
+      <mat-card-content>
+        <div class="example-container">
+          <mat-form-field appearance="fill">
+            <mat-label>Enter your email</mat-label>
+            <input matInput ngModel name="email" type="email" id="email" placeholder="pat@example.com">
+            <mat-icon matSuffix>email</mat-icon>
+          </mat-form-field>
+        </div>
+      </mat-card-content>
+
+      <mat-divider inset></mat-divider>
+
+      <mat-card-content>
+        <div class="example-container">
+          <mat-form-field appearance="fill">
+            <mat-label>Enter your password</mat-label>
+            <input matInput ngModel name="password" id="password" [type]="hide ? 'password' : 'text'">
+            <button mat-icon-button matSuffix (click)="hide = !hide" [attr.aria-label]="'Hide password'"
+              [attr.aria-pressed]="hide">
+              <mat-icon>{{hide ? 'visibility_off' : 'visibility'}}</mat-icon>
+            </button>
+          </mat-form-field>
+        </div>
+      </mat-card-content>
+
+      <mat-card-actions>
+        <button mat-button type="submit">Submit</button>
+      </mat-card-actions>
+
+      <mat-card-footer>
+        <mat-progress-bar mode="indeterminate"></mat-progress-bar>
+        <div *ngIf="error"> {{error}} </div>
+      </mat-card-footer>
+
+    </mat-card>
   </div>
-</div>
+</form>
