--- a/src/app/auth/signup/signup.page.scss
+++ b/src/app/auth/signup/signup.page.scss
@@ -1,6 +1,27 @@
-.box-container {
-  width: 50%;
-  margin: 2em auto;
-  border: 1px solid grey;
-  padding: 1.5em;
+.form-cont {
+  display: flex;
+}
+
+.example-container .mat-form-field+.mat-form-field {
+  margin-left: 8px;
+}
+
+.example-right-align {
+  text-align: right;
+}
+
+input.example-right-align::-webkit-outer-spin-button,
+input.example-right-align::-webkit-inner-spin-button {
+  display: none;
+}
+
+input.example-right-align {
+  -moz-appearance: textfield;
+}
+
+.example-card {
+  max-width: 400px;
+  padding: 30px;
+  margin: auto;
+  margin-top: 10px;
 }
