--- a/src/app/contact/contact.page.html
+++ b/src/app/contact/contact.page.html
@@ -1,1 +1,5 @@
-<h1>Contact Page</h1>
+<h1>User List</h1>
+
+<!-- <p *ngFor="let user of users">{{user.id}} {{user.firstname}} {{user.lastname}} {{user.email}}</p>
+ -->
+<app-table-paginator></app-table-paginator>
