aggiunto lista utenti

--- a/src/app/header/nav/nav.component.html
+++ b/src/app/header/nav/nav.component.html
@@ -1,6 +1,6 @@
-<!-- <a mat-button id="raised" [routerLink]="['/home']" routerLinkActive="router-link-active" class="logo-cont">
+<a mat-button id="raised" [routerLink]="['/home']" routerLinkActive="router-link-active" class="logo-cont">
   <img src="assets/img/angular-logo.png" id="img-logo">
-</a> -->
+</a>
 <a mat-button id="raised" href="#" [routerLink]="['/home']" routerLinkActive="router-link-active">
   <mat-icon>home</mat-icon> Home
 </a>
