--- a/src/app/header/nav/nav.component.scss
+++ b/src/app/header/nav/nav.component.scss
@@ -1,9 +1,9 @@
 a,
 button {
-    padding: 10px 0;
+    padding: 10px 20px;
 }
 
-/* #img-logo {
+#img-logo {
     width: 100%;
 }
 
@@ -13,4 +13,4 @@ button {
     padding-right: 15px;
     padding-left: 15px;
     border-radius: 0;
-} */
+}
