--- a/src/app/header/navbar/navbar.component.scss
+++ b/src/app/header/navbar/navbar.component.scss
@@ -1,8 +1,12 @@
 .navbar-cont {
-    /*  background-color: #e91e63; */
-
+    background-color: #e91e63;
 }
 
 .nav-title {
     background-color: #424242;
+    height: 35px;
+}
+
+.nav-title a {
+    margin: auto;
 }
