--- a/src/app/posts/posts.component.html
+++ b/src/app/posts/posts.component.html
@@ -1,24 +1,44 @@
-<div>
-    <h1>Posts Page</h1>
-    <form #f="ngForm" (ngSubmit)="onSubmit()">
-        <div>
-            <label for="title">Title</label>
-            <input type="text" ngModel name="title" id="title">
-        </div>
+<form #f="ngForm" (ngSubmit)="onSubmit()">
 
-        <div>
-            <label for="author">Author</label>
-            <input type="text" ngModel name="author" id="author">
-        </div>
+    <div class="form-cont">
+        <mat-card class="example-card">
 
-        <div>
-            <button type="submit">Submit</button>
-        </div>
+            <mat-card-title>Posts Page</mat-card-title>
+            <mat-card-subtitle>Create a post</mat-card-subtitle>
 
-        <p *ngFor="let post of posts">{{post.title}}</p>
+            <mat-card-content>
+                <div class="example-container">
+                    <mat-form-field appearance="fill">
+                        <mat-label>Insert post's author</mat-label>
+                        <input matInput ngModel type="text" name="author" id="author"
+                            placeholder="Insert post's author">
+                        <mat-icon matSuffix>email</mat-icon>
+                    </mat-form-field>
+                </div>
+            </mat-card-content>
 
-    </form>
-    <div *ngIf="error">
-        {{error}}
+            <mat-divider inset></mat-divider>
+
+            <mat-card-content>
+                <div class="example-container">
+                    <mat-form-field appearance="fill">
+                        <mat-label>Insert a post</mat-label>
+                        <input matInput ngModel type="text" name="title" id="title" placeholder="Insert a post">
+                        <mat-icon matSuffix>email</mat-icon>
+                    </mat-form-field>
+                </div>
+            </mat-card-content>
+
+            <mat-card-actions>
+                <button mat-button type="submit">Submit</button>
+            </mat-card-actions>
+
+            <mat-card-footer>
+                <div *ngIf="error"> {{error}} </div>
+            </mat-card-footer>
+
+        </mat-card>
     </div>
-</div>
+</form>
+
+<p *ngFor="let post of posts">{{post.title}}</p>
