--- a/src/app/home/home/home.page.html
+++ b/src/app/home/home/home.page.html
@@ -1,1 +1,14 @@
-<h1>Home Page</h1>
+<h1>Website Features List</h1>
+<div class="home-cont">
+    <a mat-button id="raisedprofile" href="#" [routerLink]="['/users']" routerLinkActive="router-link-active">
+        <mat-icon>account_box</mat-icon> Profile
+    </a>
+
+    <a mat-button id="raisedusers" href="#" [routerLink]="['/contact']" routerLinkActive="router-link-active">
+        <mat-icon>question_answer</mat-icon> User List
+    </a>
+
+    <a mat-button id="raisedposts" type="button" [routerLink]="['/posts']" routerLinkActive="router-link-active">
+        <mat-icon>storage</mat-icon> Posts
+    </a>
+</div>
