--- a/src/styles.scss
+++ b/src/styles.scss
@@ -8,4 +8,5 @@ body {
 body {
     margin: 0;
     font-family: Roboto, "Helvetica Neue", sans-serif;
+    background-color: rgba(148, 113, 113, 0.278);
 }
