--- a/src/app/users/users/users.page.scss
+++ b/src/app/users/users/users.page.scss
@@ -2,8 +2,7 @@
     max-width: 400px;
     margin: auto;
     margin-top: 10px;
-}
-
-.example-header-image {
-    background-size: cover;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
 }
