--- a/src/app/header/navbar/navbar.component.html
+++ b/src/app/header/navbar/navbar.component.html
@@ -9,3 +9,11 @@
   </mat-toolbar-row>
 
 </mat-toolbar>
+
+<div class="footer-cont">
+  <mat-toolbar id="footer">
+    <mat-toolbar-row>
+      <p>gi-ga-dev Copyright &copy; 2022</p>
+    </mat-toolbar-row>
+  </mat-toolbar>
+</div>
