--- a/src/app/header/navbar/navbar.component.scss
+++ b/src/app/header/navbar/navbar.component.scss
@@ -10,3 +10,18 @@
 .nav-title a {
     margin: auto;
 }
+
+div.footer-cont {
+    position: fixed;
+    bottom: 0;
+    width: 100%;
+    z-index: 10;
+}
+
+#footer {
+    background-color: #42424221;
+}
+
+/* p {
+    margin: auto;
+} */
